made page buttons fixed and align right

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,8 +6,8 @@ a {
 	color: #333399;
 }
 .pageButton {
-	background-color: #140033;
-	color: #ccb3ff;
+	background-color: #ccb3ff;
+	color: #140033;
 	border: none;
 	padding: 5px 10px 5px;
 	margin: 10px 5px 10px 0px;
@@ -16,10 +16,27 @@ a {
 
 .pageButton:hover {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	background-color: #140033;
+	color: #ccb3ff
+}
+.pageButtons {
+	position: fixed;
+	right: 20px;
+}
+.searchButton {
+	background-color: #140033;
+	color: #ccb3ff;
+	border: none;
+	padding: 5px 10px 5px;
+	margin: 10px 5px 10px 0px;
+	border-radius: 3px;
+}
+
+.searchButton:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 	background-color: #ccb3ff;
 	color: #140033
 }
-
 .separator {
 	height: 3px;
 	width: 200px;
